WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162665
REGRESSION(
r206481
): ASSERTION FAILED: isDecoderAvailable()
https://bugs.webkit.org/show_bug.cgi?id=162665
Summary
REGRESSION(r206481): ASSERTION FAILED: isDecoderAvailable()
Carlos Garcia Campos
Reported
2016-09-28 00:38:00 PDT
This is making the GTK+ debug bot exit early because many layout tests are hitting that assert after
r206481
, see for example:
https://build.webkit.org/results/GTK%20Linux%2064-bit%20Debug%20(Tests)/r206492%20(11223)/fast/canvas/canvas-drawImage-incomplete-crash-log.txt
Attachments
Patch
(1.55 KB, patch)
2016-09-28 09:26 PDT
,
Said Abou-Hallawa
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2016-09-28 09:26:16 PDT
Created
attachment 290091
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-09-28 09:55:27 PDT
It was so easy, thanks!
WebKit Commit Bot
Comment 3
2016-09-28 10:36:02 PDT
Comment on
attachment 290091
[details]
Patch Clearing flags on attachment: 290091 Committed
r206526
: <
http://trac.webkit.org/changeset/206526
>
WebKit Commit Bot
Comment 4
2016-09-28 10:36:06 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug