REGRESSION(r206481): ASSERTION FAILED: isDecoderAvailable() https://bugs.webkit.org/show_bug.cgi?id=162665

Patch by Said Abou-Hallawa <sabouhallawa@apple.com> on 2016-09-28
Reviewed by Simon Fraser.

Remove a wrong assertion from ImageSource::destroyDecodedData(). Before
r206481, the original function BitmapImage::destroyDecodedData() did not
have this assertion. Destroying the decoded ImageFrames can happen after
releasing the ImageDecoder. And it can happen also if decoding the image
fails and BitmapImage::isNull() is true. See CachedImage::finishLoading().

* platform/graphics/ImageSource.cpp:
(WebCore::ImageSource::destroyDecodedData):

Canonical link: https://commits.webkit.org/180624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206526 268f45cc-cd09-0410-ab3c-d52691b4dbfc